[package]
name = "too-many-web-servers"
version = "0.1.0"
edition = "2021"

[dependencies]


[[bin]]
name = "simple_server"
path = "src/simple_server.rs"
default-features = [ "simple_server" ]

[[bin]]
name = "non_blocking_server"
path = "src/non_blocking_server.rs"
default-features = [ "non_blocking_server" ]
